# dbt-snowflake-practice

./: .user.yml  README.md  profiles.yml  pyproject.toml
dbtlesson/: dbt_project.yml
dbtlesson/models/dim/: dim_hosts_cleansed.sql
dbtlesson/models/src/: src_hosts.sql  src_listings.sql  src_reviews.sql
dbtlesson/snapshots/: scd_raw_hosts.sql
